--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  google_fonts: ^6.2.1
-  url_launcher: ^6.2.5
-  image_picker: ^1.0.7
-  provider: ^6.1.2
-  shared_preferences: ^2.2.2
+  google_fonts: ^8.0.1
+  url_launcher: ^6.3.2
+  image_picker: ^1.2.1
+  provider: ^6.1.5+1
+  shared_preferences: ^2.5.4
   syncfusion_flutter_pdfviewer: ^27.1.58
   path_provider: ^2.1.1
   share_plus: ^7.2.1
